ZombieSurvival/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
D:\jdk\bin\javadoc.exe
-sourcepath
D:\Greenfoot\test
-source
11
-classpath
D:\lib\greenfoot.jar;D:\lib\bluejcore.jar;D:\lib\bluejeditor.jar;D:\lib\bluejext2.jar;D:\lib\junit-jupiter-5.5.2.jar;D:\lib\junit-jupiter-api-5.5.2.jar;D:\lib\junit-jupiter-engine-5.5.2.jar;D:\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\lib\junit-jupiter-params-5.5.2.jar;D:\lib\junit-platform-commons-1.5.2.jar;D:\lib\junit-platform-console-1.5.2.jar;D:\lib\junit-platform-console-standalone-1.5.2.jar;D:\lib\junit-platform-engine-1.5.2.jar;D:\lib\junit-platform-launcher-1.5.2.jar;D:\lib\junit-platform-reporting-1.5.2.jar;D:\lib\junit-platform-runner-1.5.2.jar;D:\lib\junit-platform-suite-api-1.5.2.jar;D:\lib\junit-platform-testkit-1.5.2.jar;D:\lib\junit-quickcheck-core-0.9.jar;D:\lib\junit-vintage-engine-5.5.2.jar;D:\lib\hamcrest-core-1.3.jar;D:\lib\bluej.jar;D:\lib\classgraph-4.8.90.jar;D:\lib\diffutils-1.2.1.jar;D:\lib\commons-logging-api-1.1.2.jar;D:\lib\jl1.0.1.jar;D:\lib\opencsv-2.3.jar;D:\lib\xom-1.3.7.jar;D:\lib\lang-stride.jar;D:\lib\nsmenufx-2.1.8.jar;D:\lib\wellbehavedfx-0.3.3.jar;D:\lib\guava-17.0.jar;D:\lib\httpclient-4.1.1.jar;D:\lib\httpcore-4.1.jar;D:\lib\httpmime-4.1.1.jar;D:\lib\javafx\lib\javafx.base.jar;D:\lib\javafx\lib\javafx.controls.jar;D:\lib\javafx\lib\javafx.fxml.jar;D:\lib\javafx\lib\javafx.graphics.jar;D:\lib\javafx\lib\javafx.media.jar;D:\lib\javafx\lib\javafx.properties.jar;D:\lib\javafx\lib\javafx.swing.jar;D:\lib\javafx\lib\javafx.web.jar;D:\Greenfoot\test
-d
D:\Greenfoot\test\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
test
-windowtitle
test
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
D:\Greenfoot\test/Bullet.java
D:\Greenfoot\test/Player.java
D:\Greenfoot\test/Zombie.java
D:\Greenfoot\test/MyWorld.java
<---- end of javadoc command ---->
Loading source file D:\Greenfoot\test\Bullet.java...
Loading source file D:\Greenfoot\test\Player.java...
Loading source file D:\Greenfoot\test\Zombie.java...
Loading source file D:\Greenfoot\test\MyWorld.java...
D:\Greenfoot\test\MyWorld.java:35: error: ')' expected
        addObject(zombie, Greenfoot.getRandomNumber()
                                                     ^
1 error
